--- a/hr_workers_comp_view.xaml
+++ b/hr_workers_comp_view.xaml
@@ -9,6 +9,8 @@
             @model: hr.workers_comp.claim
             @arch type='xml'
                 ~form $Worker_Compensation_Claim version='7.0'
+                    ~header
+                        @restriction_state widget='statusbar' clickable='1'
                     ~group
                         ~group
                             @employee_id invisible="context.get('hide_employee' ,True)" options="{'create':False, 'create_edit':False, 'limit':15, 'no_open':True}"
