--- a/hr_workers_comp_view.xaml
+++ b/hr_workers_comp_view.xaml
@@ -10,39 +10,51 @@
             @arch type='xml'
                 ~form $Worker_Compensation_Claim version='7.0'
                     ~header
+                        ~button @button_hr_workers_comp_close $Close .oe_edit_hide type='object' attrs="{'invisible': [('state','=','closed')]}"
                         @restriction_state widget='statusbar' clickable='1'
                     ~group
                         ~group
+                            @state invisible='1'
                             @employee_id invisible="context.get('hide_employee' ,True)" options="{'create':False, 'create_edit':False, 'limit':15, 'no_open':True}"
                             @state_claim_id
                         ~group
-                            @injury_id options="{'create':False, 'create_edit':False, 'limit':15, 'no_open':True}"
-                            @location_id options="{'create':False, 'create_edit':False, 'limit':15, 'no_open':True}"
-                    ~group col='6'
-                        ~group
                             @injury_date
-                            @full_duty_return
-                            @full_duty_lost
-                        ~group
-                            @no_duty_start
-                            @no_duty_end
-                            @no_duty_total
-                        ~group
-                            @restricted_duty_start
-                            @restricted_duty_end
-                            @restricted_duty_total
+                            @location_id options="{'create':False, 'create_edit':False, 'limit':15, 'no_open':True}"
                     ~group
-                        ~separator $Notes colspan='2'
-                        @notes nolabel='1'
+                        ~group
+                            @injury_ids options="{'create':False, 'create_edit':False, 'limit':15, 'no_open':True}" nolabel='1'
+                                ~tree default_order='name'
+                                    @name $Injuries
+                        ~group
+                            @no_duty_total
+                            @restricted_duty_total
+                            @full_duty_lost $Days_lost
+                    ~group
+                        ~separator $History colspan='4'
+                        @notes_ids nolabel='1' context="{'default_claim_id': active_id}" colspan='4'
+                            ~tree default_order='effective_date'
+                                @claim_id invisible='1'
+                                @create_date readonly='1' $Entered
+                                @write_uid readonly='1' $By
+                                @effective_date $Effective
+                                @note
+                                @duty_id $Action
+                            ~form
+                                ~group
+                                    ~group
+                                        @note
+                                    ~group
+                                        @effective_date
+                                        @duty_id options="{'create':False, 'create_edit':False, 'limit':15, 'no_open':True}"
+                                            ~tree default_order='name'
 
         ~record model='ir.ui.view' #hr_workers_comp_claim_tree
             @name: hr.workers_comp.claim.tree
             @model: hr.workers_comp.claim
             @arch type='xml'
-                ~tree $Worker_Compensation_Claims
+                ~tree $Worker_Compensation_Claims default_order='employee_id'
                     @employee_id invisible="context.get('hide_employee' ,True)"
                     @injury_date
-                    @injury_id
                     @restriction_state
                     @state
 
@@ -52,7 +64,7 @@
             @arch type='xml'
                 ~search $Workers_Compensation_Claims
                     @employee_id
-                    @injury_id
+                    @injury_ids
                     @restriction_state
                     ~separator
                     ~filter $Open_Claims @type_open domain="[('state','=','open')]"
@@ -63,7 +75,7 @@
                     ~filter $No_Duty @type_full domain="[('restriction_state','=','full')]"
                     ~group expand='0' string='Group by...'
                         ~filter @restriction_state $Duty_Level context="{'group_by':'restriction_state'}"
-                        ~filter @injury_id $Injury context="{'group_by':'injury_id'}"
+                        ~filter @injury_ids $Injury context="{'group_by':'injury_ids'}"
                         ~filter @location_id $Location context="{'group_by':'location_id'}"
                     
 
@@ -79,7 +91,7 @@
         ~menuitem name='Workers Compensation' #menu_hr_workers_comp parent='base.menu_hr_claims' action='hr_workers_comp_claim_action'
         ~menuitem name='Workers Compensation' #menu_hr_workers_comp_configuration parent='hr.menu_hr_configuration'
 
-        // configuration for injuries and resolutions
+        // configuration for injuries and duties
 
         ~record model='ir.ui.view' #hr_workers_comp_injury_form
             @name: hr.workers_comp.injury.form
@@ -92,7 +104,7 @@
             @name: hr.workers_comp.injury.tree
             @model: hr.workers_comp.injury
             @arch type='xml'
-                ~tree $Injury
+                ~tree $Injury default_order='name'
                     @name
 
         ~record model='ir.actions.act_window' #hr_workers_comp_injury_action
@@ -103,27 +115,27 @@
 
         ~menuitem name='Injuries' #menu_hr_workers_comp_injury parent='menu_hr_workers_comp_configuration' action='hr_workers_comp_injury_action'
 
-        ~record model='ir.ui.view' #hr_workers_comp_resolution_form
-            @name: hr.workers_comp.resolution.form
-            @model: hr.workers_comp.resolution
+        ~record model='ir.ui.view' #hr_workers_comp_duty_type_form
+            @name: hr.workers_comp.duty_type.form
+            @model: hr.workers_comp.duty_type
             @arch type='xml'
-                ~form $Injury version='7.0'
+                ~form $Duty_Level version='7.0'
                     @name
 
-        ~record model='ir.ui.view' #hr_workers_comp_resolution_tree
-            @name: hr.workers_comp.resolution.tree
-            @model: hr.workers_comp.resolution
+        ~record model='ir.ui.view' #hr_workers_comp_duty_type_tree
+            @name: hr.workers_comp.duty_type.tree
+            @model: hr.workers_comp.duty_type
             @arch type='xml'
-                ~tree $Injury
+                ~tree $Duty_Level default_order='name'
                     @name
 
-        ~record model='ir.actions.act_window' #hr_workers_comp_resolution_action
-            @name: Resolutions
-            @res_model: hr.workers_comp.resolution
+        ~record model='ir.actions.act_window' #hr_workers_comp_duty_type_action
+            @name: Duty Types
+            @res_model: hr.workers_comp.duty_type
             @view_type: form
             @view_mode: tree,form
 
-        ~menuitem name='Resolutions' #menu_hr_workers_comp_resolution parent='menu_hr_workers_comp_configuration' action='hr_workers_comp_resolution_action'
+        ~menuitem name='Duty Types' #menu_hr_workers_comp_duty_type parent='menu_hr_workers_comp_configuration' action='hr_workers_comp_duty_type_action'
 
         // employee integration
 
