--- a/hr_workers_comp_view.xaml
+++ b/hr_workers_comp_view.xaml
@@ -17,8 +17,12 @@
                             @state invisible='1'
                             @employee_id invisible="context.get('hide_employee' ,True)" options="{'create':False, 'create_edit':False, 'limit':15, 'no_open':True}"
                             @state_claim_id
+                            @attorney $Attorney_Retained
+                            @reserved_amount widget='monetary'
+                            @paid_amount widget='monetary'
                         ~group
                             @injury_date
+                            @notification_date
                             @location_id options="{'create':False, 'create_edit':False, 'limit':15, 'no_open':True}"
                     ~group
                         ~group
