--- a/hr_workers_comp_view.xaml
+++ b/hr_workers_comp_view.xaml
@@ -11,6 +11,7 @@
                 ~form $Worker_Compensation_Claim version='7.0'
                     ~header
                         ~button @button_hr_workers_comp_close $Close .oe_edit_hide type='object' attrs="{'invisible': [('state','=','closed')]}"
+                        ~button @button_hr_workers_comp_reopen $Re-Open .oe_edit_hide type='object' attrs="{'invisible': [('state','=','open')]}"
                         @restriction_state widget='statusbar' clickable='1'
                     ~group
                         ~group
