add location to Claims tree view

--- a/hr_workers_comp_view.xaml
+++ b/hr_workers_comp_view.xaml
@@ -62,6 +62,7 @@
                     @injury_date
                     @restriction_state
                     @state
+                    @location_id
 
         ~record model='ir.ui.view' #hr_workers_comp_claim_filter
             @name: hr.workers_comp.claim.tree
